2014-07-08  Araki Ken  <arakiken@users.sf.net>

	* x_display_x68kgrf.c:
	  - Keyboard events from /dev/kbd are processed instead of stdin.
	  - x68k_set_use_tvram_colors() and x68k_set_tvram_cmap() resets
	    _display.color_cache.

	* x.h: KS_Print -> KS_Print_Screen

	* x_display.c: Key squences on NetBSD/x68k are added to the table in
	  receive_stdin_key_event().

2014-07-08  Araki Ken  <arakiken@users.sf.net>

	* libtype/Makefile.in: Compiling error is fixed.

	* version.h.in: 3.3.7 -> 3.3.7post

2014-07-06  Araki Ken  <arakiken@users.sf.net>

	* 3.3.7 released.
	  (tag "rel-3_3_7")

	* configure.in, mlterm.spec, main/version.h.in,
	  MLTermPty.c, android/jni/version.h, doc/en/ReleaseNote:
	  updated for 3.3.7.

2014-07-06  Araki Ken  <arakiken@users.sf.net>

	* x_shortcut.c: Minor fixes.

	* gtk/vte.c: If cmd_path is omittted in argv, argv[0] = cmd_path.

2014-07-05  Araki Ken  <arakiken@users.sf.net>

	* kik_str.c: Illegal memory allocation is fixed.

	* x_shortcut.c: [operation]=[key] format is obsoleted.

2014-07-05  Araki Ken  <arakiken@users.sf.net>

	* kik_str.c, x_shortcut.c: kik_str_unescape() hack for x_shortcut.c is removed.

2014-07-05  Araki Ken  <arakiken@users.sf.net>

	* mlclient/main.c: Minor fixes.

	* main_loop.c: --deffont option is added.

	* README.ja, mlterm.1: Updated.

	* ml_bidi.c: U+2500-259f and DEC_SPECIAL characters are forcibly regarded as bidi
	  separator ones.

	* ml_term.c: kik_str_unescape(bidi_separators) is called.

	* ml_screen.c: kik_str_unescape(word_separators) is called.

2014-06-30  Araki Ken  <arakiken@users.sf.net>

	* ml_pty.[ch], ml_pty_inter.h, ml_pty_unix.c, ml_term.[ch], x_main_config.[ch],
	  x_screen_manager.c:
	  chdir(work_dir) if --work-directory option is specified.

	* mlterm.1, mlclient.1, README.ja, PROTOCOL, etc/main, etc/main.ja: Updated.

2014-06-29  Araki Ken  <arakiken@users.sf.net>

	* ml_bidi.c: Minor fixes.

2014-06-28  Araki Ken  <arakiken@users.sf.net>
