@@ -1,3 +1,9 @@
+2014-07-09  Araki Ken  <arakiken@users.sf.net>
+
+	* x_display_freebsd.c: Duplicated capslock processing is fixed.
+
+	* jni/x_display.c: Minor fixes.
+
 2014-07-08  Araki Ken  <arakiken@users.sf.net>
 
 	* x_display_x68kgrf.c:
